-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1
-
3
-
12442
We are running Lustre 2.4.0-21chaos (see http://github/com/chaos/lustre), and most likely of particular interest are these two patches that we are carrying:
We now find that, at least on the ldiskfs MDS nodes, OI scrub runs on every start up of the MDS. The console message looks something like this:
2014-01-28 09:27:28 sumom-mds1 login: LustreError: 0-0: lsc-MDT0000: trigger OI scrub by RPC for [0x7e4d2310f09:0x2ddf:0x0], rc = 0 [1]
Given the frequency of MDS reboots (i.e. often) required lately for other bugs, OI scrub is running far too much.